--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "15.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.4.1",
     "react-spring": "^9.7.5"
   },
   "devDependencies": {
