--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
     "framer-motion": "^11.14.1",
+    "lightweight-charts": "^5.0.7",
     "next": "^14.0.0",
     "react": "^18.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.5.0",
     "react-spring": "^9.7.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
